implemented routes(get, post) for curriculum plans
